--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 packages = [{include = "kwg_api"}]
 
 [tool.poetry.scripts]
-start = "kwg_api.main:app"
+start = "uvicorn kwg_api.main:app --reload"
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -16,7 +16,6 @@ rdflib = "^6.3.2"
 sparqlwrapper = "^2.0.0"
 uvicorn = "^0.23.1"
 jinja2 = "^3.1.2"
-
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
