--- a/docker-compose.stage.yaml
+++ b/docker-compose.stage.yaml
@@ -2,9 +2,11 @@ version: '3'
 
 services:
   api:
-    build: '.'
+    build:
+      context: ./kwg-api/
+      dockerfile: Dockerfile
     ports:
-      - '80:80'
+      - '8080:8080'
     environment:
       - base_address_http=http://staging.knowwheregraph.org
       - base_address_https=https://staging.knowwheregraph.org
