--- a/docker-compose.stage.yaml
+++ b/docker-compose.stage.yaml
@@ -1,11 +1,12 @@
 version: '3'
 
 services:
-  api:
+  kwg-api:
     container_name: kwg-api
     build:
       context: ./kwg-api/
       dockerfile: Dockerfile
+    image: kwg-api
     ports:
       - '8080:8080'
     environment:
