--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -1,10 +1,15 @@
 version: '3'
 
 services:
-  api:
-    build: '.'
+  kwg-api:
+    container_name: kwg-api
+    build:
+      context: ./kwg-api/
+      dockerfile: Dockerfile
     ports:
-      - '80:80'
+      - '8080:8080'
     environment:
       - base_address_http=http://staging.knowwheregraph.org
       - base_address_https=https://staging.knowwheregraph.org
+    networks:
+      - kwg_network
