--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -12,5 +12,6 @@ services:
     environment:
       - base_address_http=http://stko-kwg.geog.ucsb.edu
       - base_address_https=https://stko-kwg.geog.ucsb.edu
+      - base_browse_address=https://stko-kwg.geog.ucsb.edu/browse
     networks:
       - kwg_network
