--- a/docker-compose.stage.yaml
+++ b/docker-compose.stage.yaml
@@ -10,8 +10,8 @@ services:
     ports:
       - '8080:8080'
     environment:
-      - base_address_http=http://staging.knowwheregraph.org
-      - base_address_https=https://staging.knowwheregraph.org
+      - base_address_http=http://kwg-api:8080
+      - base_address_https=https://kwg-api:8080
       - base_browse_address=https://staging.knowwheregraph.org/browse
     networks:
       - kwg_network
